# sbnci

./: CMakeLists.txt  README.md  RepositoryTag  readme
sbnci/: CMakeLists.txt
sbnci/Common/: CMakeLists.txt
sbnci/Common/Modules/: CMakeLists.txt
sbnci/Common/Modules/CRT/: CMakeLists.txt  crtvalidation.fcl
sbnci/Common/Modules/MCRecoUtils/: CMakeLists.txt  RecoUtils.cc  ShowerUtils.cc  ShowerUtils.h  TrackUtils.cc  TrackUtils.h
sbnci/Common/Modules/PDS/: :q  CMakeLists.txt  LightenSimPhotons_module.cc  PDSRecoValidation_module.cc  PDSSimValidation_module.cc  PDSValidationICARUS_module.cc  PDSValidation_module.cc  pds_reco_validation.fcl  pds_sim_validation.fcl  pdsvalidation.fcl
sbnci/Common/Modules/TPCReco/: CMakeLists.txt
sbnci/Common/Modules/TPCSim/: CMakeLists.txt  TPCSimValidation_module.cc  tpcsimvalidation.fcl
sbnci/Common/PlottingScripts/: CMakeLists.txt  CompareDataDistributions.C  sbnciplot_pfpslicevalidation.C  sbnciplot_tpcsimvalidation.C
sbnci/Common/scripts/: README.md  crtvalidation.sh  gen_ci_histos.sh  pds_reco_validation.sh  pds_sim_validation.sh  pdsvalidation.sh  pfpslicevalidation.sh  pfpvalidation.sh  recoeff.sh  sbnci_setcodename.sh  sbnciplots.sh  showervalidation.sh  tpcsimvalidation.sh  trackvalidation.sh
sbnci/Common/thresholds/: MC_PFP_Both_ComparisonChiSquareTh.txt  MC_Reco_All_ComparisonChiSquareTh.txt  TPCSim_Validation_ComparisonChiSquareTh.txt
sbnci/ICARUS/: CMakeLists.txt
sbnci/ICARUS/JobConfigurations/: allrecovalidation_job_icarus.fcl  ci_prodcorsika_bnb_genie_protononly_overburden_icarus.fcl  crtvalidation_job_icarus.fcl  pdsvalidation_job_icarus.fcl  pfpvalidation_job_icarus.fcl  recoeff_job_icarus.fcl  showervalidation_job_icarus.fcl  tpcsimvalidation_job_icarus.fcl
sbnci/ICARUS/JobConfigurations/Base/: crtvalidation_icarus.fcl  pfpvalidation_icarus.fcl  (+2 more)
sbnci/ICARUS/Modules/: CMakeLists.txt
sbnci/ICARUS/PlottingScripts/: CMakeLists.txt  sbnciplot_crtvalidation_icarus.C  sbnciplot_pdsvalidation_icarus.C  sbnciplot_pfpslicevalidation_icarus.C  sbnciplot_pfpvalidation_icarus.C  sbnciplot_showervalidation_icarus.C  sbnciplot_tpcsimvalidation_icarus.C
sbnci/ICARUS/thresholds/: CMakeLists.txt  CRT_Validation_ComparisonChiSquareTh.txt  MC_PFPSlice_Validation_ComparisonChiSquareTh.txt  PDS_Validation_ComparisonChiSquareTh.txt
sbnci/Modules/: CMakeLists.txt  README.md
sbnci/Modules/CRT/: CMakeLists.txt  CRTValidation_module.cc  crtvalidation.fcl
sbnci/Modules/JobConfigurations/: allrecovalidation_job_sbnd.fcl  crtvalidation_job_sbnd.fcl  dEdx_job_sbnd.fcl  pdsvalidation_job_sbnd.fcl  pfpslicevalidation_job_sbnd.fcl  pfpvalidation_both_sbnd.fcl  pfpvalidation_job_sbnd.fcl  recoeff_job_sbnd.fcl  showervalidation_job_sbnd.fcl  tpcsimvalidation_job_sbnd.fcl  trackvalidation_job_sbnd.fcl
sbnci/Modules/NoiseTest/: CMakeLists.txt  NoiseTest_module.cc  noisetest.fcl
sbnci/Modules/PDS/: CMakeLists.txt  PDSValidation_module.cc  pdsvalidation.fcl
sbnci/Modules/PFPValidation/: CMakeLists.txt  PFPSliceValidationCI_module.cc  PFPValidationCI_module.cc  pfpslicevalidation_job_sbnd.fcl  pfpvalidation.fcl  pfpvalidation_both_sbnd.fcl  pfpvalidation_job_sbnd.fcl
sbnci/Modules/RecoEff/: CMakeLists.txt  RecoEff_module.cc  reco_eff.fcl  reco_eff_tree.fcl  recoeff.fcl
sbnci/Modules/RecoTests/: RecoTests_module.cc  reco_tests.fcl
sbnci/Modules/ShowerValidation/: #TRACSRecoValidation.fcl#  CMakeLists.txt  CMakeLists.txt~  SBNRecoValidation.fcl  ShowerValidation_module.cc  ShowerValidation_module.cc~  TRACSValidation.fcl  TRACSValidation.fcl~  showerfindermodules.fcl  showerfindermodules.fcl~  showervalidation.fcl
sbnci/Modules/TPCSim/: TPCSimValidation_module.cc  tpcsimvalidation.fcl
sbnci/Modules/TrackValidation/: CMakeLists.txt  TrackValidation_module.cc  trackvalidation.fcl
sbnci/Modules/dEdx/: CMakeLists.txt  PlotdEdx_module.cc  dEdx.fcl  dEdx.fcl~
sbnci/PlottingScripts/: CMakeLists.txt  CompareDataDistributions.C  PlotTotalPE.C  PlotTotalPE.h  ShowerValidation_plots.C  ShowerValidation_plots.C~  ShowerValidation_plots.root  sbnciplot_crtvalidation.C  sbnciplot_pdsvalidation.C  sbnciplot_pfpslicevalidation.C  sbnciplot_pfpvalidation.C  sbnciplot_reco_tests_bnb.C  sbnciplot_reco_tests_nue.C  sbnciplot_recoeff.C  sbnciplot_recoeff_bnb.C  sbnciplot_recoeff_nue.C  sbnciplot_showervalidation.C  sbnciplot_trackvalidation.C
sbnci/SBND/: CMakeLists.txt
sbnci/SBND/JobConfigurations/: allrecovalidation_job_sbnd.fcl  allvalidation_job_sbnd.fcl  crtvalidation_job_sbnd.fcl  dEdx_job_sbnd.fcl  noisetest_job_sbnd.fcl  pdsrecovalidation_job_sbnd.fcl  pdssimvalidation_job_sbnd.fcl  pdsvalidation_job_sbnd.fcl  showervalidation_job_sbnd.fcl  trackvalidation_job_sbnd.fcl
sbnci/SBND/Modules/: CMakeLists.txt
sbnci/SBND/PlottingScripts/: CMakeLists.txt  README.md  sbnciplot_crtvalidation_sbnd.C  sbnciplot_pdsrecovalidation_sbnd.C  sbnciplot_pdssimvalidation_sbnd.C  sbnciplot_pdsvalidation_sbnd.C  sbnciplot_pfpslicevalidation_sbnd.C  sbnciplot_pfpvalidation_sbnd.C  sbnciplot_recoeff_sbnd.C  sbnciplot_showervalidation_sbnd.C  sbnciplot_tpcsimvalidation_sbnd.C  sbnciplot_trackvalidation_sbnd.C
sbnci/SBND/thresholds/: CMakeLists.txt  CRT_Validation_ComparisonChiSquareTh.txt  MC_Shower_ComparisonChiSquareTh.txt  PDSRecoValidation_ComparisonChiSquareTh.txt  PDSSimValidation_ComparisonChiSquareTh.txt  PDSValidation_ComparisonChiSquareTh.txt  PDS_Validation_ComparisonChiSquareTh.txt
sbnci/scripts/: CompareDataDistributions.C  pdsvalidation.sh  pfpslicevalidation.sh  pfpvalidation.sh  reco_tests_bnb.sh  reco_tests_nue.sh  recoeff.sh  recoeff_bnb.sh  recoeff_nue.sh  sbnciplots.sh  showervalidation.sh  trackvalidation.sh
sbnci/thresholds/: CRT_Validation_ComparisonChiSquareTh.txt  MC_BNB_RecoTests_ComparisonChiSquareTh.txt  MC_PFPSlice_Validation_ComparisonChiSquareTh.txt  MC_PFP_Both_ComparisonChiSquareTh.txt  MC_PFP_Validation_ComparisonChiSquareTh.txt  MC_RecoEff_ComparisonChiSquareTh.txt  MC_Reco_All_ComparisonChiSquareTh.txt  MC_Shower_ComparisonChiSquareTh.txt  MC_Track_ComparisonChiSquareTh.txt  README.md
ups/: CMakeLists.txt  (+5 more)
(+49 files in other folders)
