add_subdirectory(JobConfigurations)
add_subdirectory(MCRecoUtils)
add_subdirectory(NoiseTest)
add_subdirectory(dEdx)
add_subdirectory(ShowerValidation)
add_subdirectory(RecoEff)
add_subdirectory(PFPValidation)
add_subdirectory(PDS)
add_subdirectory(CRT)
add_subdirectory(TPCSim)

install_headers()
install_fhicl()
install_source()
